tests/compiler/typecheck/import_4.kk
// error: cannot import private symbol
import {spam} from "./import_1.kk"